crates/aven-check/tests/fixtures/check/valid/comptime-omit.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }
omit = (object: {..r}, @keys: keysOf(r)@{}) => { ..object, -keys }
result : { email: Text } = omit(user, @{"name"})
